# habitat-sim

./: .clang-format  .clang-tidy  .cmake-format.py  .coveragerc  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  BUILD_FROM_SOURCE.MD  BUILD_FROM_SOURCE.md  CLAUDE.local.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS.md  DETAILS.md  Instance-Segmentation-Example.ipynb  MANIFEST.in  OPENEXR_PATCHES.md  README.md  README_PYPI.md  README_TBP_USERS.md  TempGlfwApplication.cpp  UV_WSL2_BUILD.md  abcddfhgfh  build.sh  build_and_install_habitat_sim_js.sh  build_docs.sh  build_fair_cluster.sh  build_js.sh  build_physics.sh  clipboard.txt  codecov.yaml  codecov.yml  extraction.py  habitat-lighting-setups.ipynb  imgui.ini  install_deps.sh  (+17 more)
src/: CMakeLists.txt  test.cpp
src/cmake/: FindAssimp.cmake  FindBullet.cmake  FindCorrade.cmake  FindEGL.cmake  FindGLFW.cmake  FindImGui.cmake  FindMagnum.cmake  FindMagnumBindings.cmake  FindMagnumIntegration.cmake  FindMagnumPlugins.cmake  Sanitizers.cmake  dependencies.cmake
src/esp/: CMakeLists.txt
src/esp/agent/: Agent.cpp  Agent.h  CMakeLists.txt
src/esp/assets/: Asset.cpp  Asset.h  Attributes.cpp  Attributes.h  BaseMesh.cpp  BaseMesh.h  CMakeLists.txt  CollisionMeshData.h  FRLInstanceMeshData.cpp  FRLInstanceMeshData.h  GenericInstanceMeshData.cpp  GenericInstanceMeshData.h  GenericMeshData.cpp  GenericMeshData.h  GenericSemanticMeshData.cpp  GenericSemanticMeshData.h  GltfMeshData.cpp  GltfMeshData.h  InstanceMeshData.cpp  InstanceMeshData.h  MeshData.h  MeshMetaData.h  Mp3dInstanceMeshData.cpp  Mp3dInstanceMeshData.h  PTexMeshData.cpp  PTexMeshData.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsObjectMetaData.cpp  PhysicsObjectMetaData.h  RenderAssetInstanceCreation.h  RenderAssetInstanceCreationInfo.cpp  RenderAssetInstanceCreationInfo.h  ReplicaInstanceMeshData.cpp  ReplicaInstanceMeshData.h  ResourceManager.cpp  ResourceManager.h  RigManager.cpp  RigManager.h  SceneLoader.cpp  (+1 more)
src/esp/batched_sim/: BatchedSimAssert.h  BatchedSimulator.cpp  BatchedSimulator.h  BpsSceneMapping.cpp  BpsSceneMapping.h  CMakeLists.txt  CollisionBroadphaseGrid.cpp  CollisionBroadphaseGrid.h  ColumnGrid.cpp  ColumnGrid.h  ColumnGridBuilder.cpp  ColumnGridBuilder.h  EpisodeGenerator.cpp  EpisodeGenerator.h  EpisodeSet.cpp  EpisodeSet.h  GlmUtils.cpp  GlmUtils.h  PlacementHelper.cpp  PlacementHelper.h  ProfilingScope.cpp  ProfilingScope.h  PythonBatchEnvironmentState.cpp  PythonBatchEnvironmentState.h  SerializeCollection.cpp  SerializeCollection.h
src/esp/bindings/: AttributesBindings.cpp  AttributesManagersBindings.cpp  BatchedSimBindings.cpp  Bindings.cpp  Bindings.h  CMakeLists.txt  ConfigBindings.cpp  CoreBindings.cpp  EnumOperators.h  GeoBindings.cpp  GfxBindings.cpp  GfxReplayBindings.cpp  MetadataMediatorBindings.cpp  OpaqueTypes.h  PhysicsBindings.cpp  PhysicsObjectBindings.cpp  PhysicsWrapperManagerBindings.cpp  SceneBindings.cpp  SensorBindings.cpp  ShortestPathBindings.cpp  SimBindings.cpp  attributesBindings.cpp  attributesManagersBindings.cpp  bindings.cpp  bindings.h  geoBindings.cpp
src/esp/bindings_js/: CMakeLists.txt  bindings.css  bindings.html  bindings_js.cpp  index.js  index.ts  navigate.js  replay_viewer.html  runtime.js  simenv_embind.js  test_page.html  topdown.js  viewer.css  viewer.html  webpack.config.js  webvr.html
src/esp/core/: AbstractManagedObject.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Check.cpp  Check.h  Configuration.cpp  Configuration.h  Esp.cpp  Esp.h  EspEigen.h  Grid2D.h  Logging.cpp  Logging.h  ManagedContainer.h  ManagedContainerBase.cpp  ManagedContainerBase.h  ManagedFileBasedContainer.h  MathInclude.h  Random.h  RigidState.h  Utility.h  configure.h.cmake  esp.cpp  esp.h  logging.cpp  logging.h  random.h  spimpl.h
src/esp/geo/: CMakeLists.txt  CoordinateFrame.cpp  CoordinateFrame.h  Geo.cpp  Geo.h  OBB.cpp  OBB.h  VoxelGrid.cpp  VoxelGrid.h  VoxelUtils.cpp  VoxelUtils.h  VoxelWrapper.cpp  VoxelWrapper.h  geo.cpp  geo.h
src/esp/gfx/: BackgroundRenderer.cpp  BackgroundRenderer.h  BatchRenderer.cpp  BatchRenderer.h  BatchRendererStandalone.cpp  BatchRendererStandalone.h  CMakeLists.txt  CubeMap.cpp  CubeMap.h  CubeMapCamera.cpp  CubeMapCamera.h  CubeMapShaderBase.cpp  CubeMapShaderBase.h  Debug3DText.cpp  Debug3DText.h  DebugLineRender.cpp  DebugLineRender.h  DebugRender.cpp  DepthMap.h  (+107 more)
src/shader/: texture.vert
src/shaders/: Shaders.conf  ShadowCaster.frag  ShadowCaster.vert  bigTriangle.vert  depth.frag  depthMap.frag  depthMap.vert  doubleSphereCamera.frag  doubleSphereCamera.vert  equirectangular.frag  equirectangularToCubeMap.frag  gaussianFilter.frag  generic-default-gl410.frag  generic-default-gl410.vert  hammersleyPointsOnHemisphere.glsl  pbr.frag  pbr.vert  pbrBRDF.glsl  pbrBSDF.glsl  pbrCommon.glsl  pbrIrradianceMap.frag  pbrIrradianceMap.vert  pbrLighting.glsl  pbrMaterials.glsl  pbrPrecomputedMap.vert  pbrPrefilteredMap.frag  pbrStructs.glsl  pbrUniforms.glsl  phong-shadow-receiver.frag  phong-shadow-receiver.vert  primitive-id-textured-gl410.frag  primitive-id-textured-gl410.vert  ptex-default-gl410.frag  ptex-default-gl410.geom  ptex-default-gl410.vert  shadowsPCF.glsl  shadowsVSM.glsl  texture.frag  textureVisualizer.frag  triangle-id.frag  (+5 more)
src/tests/: AabbTest.cpp  AssetsTest.cpp  AttributesConfigsTest.cpp  AttributesManagersTest.cpp  BatchRendererTest.cpp  BatchReplayRendererTest.cpp  BatchedSimTest.cpp  CMakeLists.txt  ColumnGridTest.cpp  ConfigurationTest.cpp  CoreTest.cpp  CullingTest.cpp  DepthUnprojectionTest.cpp  DrawableTest.cpp  FloorplannerProcessingTest.cpp  GeoTest.cpp  GfxBatchHbaoTest.cpp  GfxBatchRendererTest.cpp  GfxPbrIblTest.cpp  GfxReplayTest.cpp  GibsonSceneTest.cpp  HM3DSceneTest.cpp  IOTest.cpp  IOTest.cpp.orig  LoggingTest.cpp  MetadataMediatorTest.cpp  Mp3dTest.cpp  NavTest.cpp  PathFinderTest.cpp  PhysicsTest.cpp  ReplayBatchRendererTest.cpp  ReplicaSceneTest.cpp  ResourceManagerTest.cpp  SceneGraphTest.cpp  SemanticTest.cpp  SensorTest.cpp  SimTest.cpp  SuncgTest.cpp  VoxelGridTest.cpp  configure.h.cmake  (+1 more)
(+1373 files in other folders)
